# superset-auth-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
deploy/: docker-compose.prod.yml
deploy/k8s/: provision-roles-job.yaml
docs/adr/: ADR-002-role-management.md  ADR-003-multitenant-context.md
superset_auth_kit/: __init__.py  exceptions.py
superset_auth_kit/api/: __init__.py  blueprint.py  schemas.py  views.py
superset_auth_kit/cli/: commands.py
superset_auth_kit/providers/: __init__.py  _base.py  jwt.py
superset_auth_kit/replay/: __init__.py  blocklist.py
superset_auth_kit/roles/: capability_resolver.py  definitions.py  role_provisioner.py  role_reconciler.py
superset_auth_kit/security/: __init__.py  manager.py  session.py
superset_auth_kit/sync/: __init__.py  fingerprint.py  role_mapper.py  user_syncer.py
superset_auth_kit/tenant/: __init__.py  context.py
tests/: conftest.py
tests/integration/: conftest.py  superset_config_for_tests.py  test_sso_flow.py
tests/unit/: test_cache_partitioning.py  test_context.py  test_jwt_provider.py  test_role_mapper.py  test_roles.py  test_tenant_lifecycle.py  test_user_syncer.py  test_views.py
